--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" x-data="{menuIsOpen: false}">
+<html lang="fr" x-data="{menuIsOpen: false}" :class="" {noscroll:menuIsOpen,}>
 
 <head>
   <meta charset="UTF-8" />
@@ -7,15 +7,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Test menu</title>
   <script defer src="https://unpkg.com/alpinejs"></script>
+  <style>
+    .menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: #fff;
+      display: grid;
+      place-content: center;
+    }
+
+    .header_menuBtn {
+      position: relative;
+      z-index: 10;
+    }
+
+    .noscroll,
+    .noscroll body {
+      overflow: hidden;
+    }
+  </style>
 </head>
 
 <body>
   <!-- https://emmet.io/ -->
   <!-- header>h1{Test de menu} -->
   <header>
-    <button aria-controls="mainNav">menu</button>
+    <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBt.number">
+      menu
+    </button>
     <h1>Test de menu</h1>
-    <nav id="mainNav" x-show="menuIsOpen">
+    <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
       <ul>
         <li><a href="#">item 1</a></li>
         <li><a href="#">item 2</a></li>
