--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Test menu</title>
+  <title>Tp Image</title>
   <script defer src="https://unpkg.com/alpinejs"></script>
   <style>
     .menu {
@@ -36,44 +36,17 @@
   <!-- header>h1{Test de menu} -->
   <header>
     <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-      menu
+      Menu
     </button>
-    <h1>Test de menu</h1>
+    <h1>TP image</h1>
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
       <ul>
-        <li><a href="#">item 1</a></li>
+        <li><a href="chat.html">Image de Chat</a></li>
         <li><a href="#">item 2</a></li>
         <li><a href="#">item 3</a></li>
       </ul>
     </nav>
   </header>
-  <!-- h2>lorem2^p>lorem -->
-  <h2>Lorem, ipsum.</h2>
-  <p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat
-    mollitia adipisci alias error laboriosam numquam incidunt magni eum eos
-    nemo aliquid pariatur quam voluptates animi laudantium, aperiam
-    consectetur nobis enim.
-  </p>
-  <dl x-data="{menuIsOpen: false}">
-    <dt>
-      <button @click="menuIsOpen =! menuIsOpen">Lorem.</button>
-    </dt>
-    <dd x-show="menuIsOpen">Lorem ipsum dolor sit amet.</dd>
-  </dl>
-  <dl x-data="{menuIsOpen: false}">
-    <dt>
-      <button @click="menuIsOpen =! menuIsOpen">Id.</button>
-    </dt>
-    <dd x-show="menuIsOpen">Facere consequatur quidem incidunt iusto!</dd>
-  </dl>
-  <dl x-data="{menuIsOpen: false}">
-    <dt>
-      <button @click="menuIsOpen =! menuIsOpen">Cumque.</button>
-    </dt>
-    <dd x-show="menuIsOpen">Eius similique dolore aliquid officiis!</dd>
-  </dl>
-
 </body>
 
 </html>
