Ajout 2pages de wombat

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
       <ul>
         <li><a href="chat.html">Image de Chat</a></li>
-        <li><a href="#">item 2</a></li>
-        <li><a href="#">item 3</a></li>
+        <li><a href="wombat.html">Image de Wombat</a></li>
       </ul>
     </nav>
   </header>
