Ajout acceuil page wombat

--- a/wombat.html
+++ b/wombat.html
@@ -46,8 +46,8 @@
             </ul>
         </nav>
     </header>
-    <li><a href="index.html">Wombat 1</a></li>
-    <li><a href="index.html">Wombat 2</a></li>
+    <li><a href="Wombat 1.html">Wombat 1</a></li>
+    <li><a href="wombat 2.html">Wombat 2</a></li>
 </body>
 
 </html>
