--- a/chat.html
+++ b/chat.html
@@ -46,8 +46,8 @@
             </ul>
         </nav>
     </header>
-    <li><a href="Wombat 1.html">Chat 1</a></li>
-    <li><a href="wombat 2.html">Chat 2</a></li>
+    <li><a href="chat 1.html">Chat 1</a></li>
+    <li><a href="chat 2.html">Chat 2</a></li>
 </body>
 
 </html>
