--- a/chat.html
+++ b/chat.html
@@ -38,7 +38,7 @@
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
             Menu
         </button>
-        <h1>Wombat</h1>
+        <h1>Chat</h1>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
                 <li><a href="wombat.html">Image de Wombat</a></li>
