Réglage probleme d'image de chat

--- a/chat 1.html
+++ b/chat 1.html
@@ -47,7 +47,7 @@
             </ul>
         </nav>
     </header>
-    <img src="chat 1.html" alt="Image chat">
+    <img src="Chat 1.jpg" alt="Image chat">
 </body>
 
 </html>
