--- a/chat 2.html
+++ b/chat 2.html
@@ -47,7 +47,7 @@
             </ul>
         </nav>
     </header>
-    <img src="chat 2.html" alt="Image chat">
+    <img src="Chat 2.jpg" alt="Image chat">
 </body>
 
 </html>
