--- a/wombat 2.html
+++ b/wombat 2.html
@@ -39,6 +39,7 @@
             Menu
         </button>
         <h1>Wombat n°2</h1>
+        <li><a href="wombat 1.html">Voir Wombat n°1</a></li>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
                 <li><a href="chat.html">Image de Chat</a></li>
