Ajout élément page chat

--- a/chat 1.html
+++ b/chat 1.html
@@ -39,6 +39,7 @@
             Menu
         </button>
         <h1>Chat n°1</h1>
+        <li><a href="chat 2.html">Voir chat n°2</a></li>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
                 <li><a href="chat.html">Image de Chat</a></li>
