--- a/chat 2.html
+++ b/chat 2.html
@@ -39,6 +39,7 @@
             Menu
         </button>
         <h1>Chat n°2</h1>
+        <li><a href="chat 1.html">Voir chat n°1</a></li>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
                 <li><a href="chat.html">Image de Chat</a></li>
