Changement menu + création dossier

--- a/Wombat/wombat.html
+++ b/Wombat/wombat.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image de wombat</title>
+    <title>Tp Image</title>
     <script defer src="https://unpkg.com/alpinejs"></script>
     <style>
         .menu {
@@ -38,16 +38,16 @@
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
             Menu
         </button>
-        <h1>Wombat n°2</h1>
-        <li><a href="wombat 1.html">Voir Wombat n°1</a></li>
+        <h1>Wombat</h1>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="chat.html">Image de Chat</a></li>
-                <li><a href="wombat.html">Image de Wombat</a></li>
                 <li><a href="index.html">Retourner à l'accueil</a></li>
+                <li><a href="chat.html">Image de Chat</a></li>
             </ul>
         </nav>
     </header>
-    <img src="Wombat2.jpg" alt="Image wombat">
+    <li><a href="Wombat 1.html">Wombat 1</a></li>
+    <li><a href="wombat 2.html">Wombat 2</a></li>
 </body>
+
 </html>
