--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     </dl>
     <dl>
       <dt><button @click="openElement = 'element2'">Chat</button></dt>
-      <dd x-show="openElement === 'element2'"></dd>
+      <dd x-show="openElement === 'element2'"><li><a href="chat 1.html">Voir Chat n°1</a></li></dd>
+      <dd x-show="openElement === 'element2'"><li><a href="chat 2.html">Voir Chat n°2</a></li></dd>
     </dl>
     <dl>
       <dt><button @click="openElement = 'element3'">Public</button></dt>
