--- a/Chats/chat 2.html
+++ b/Chats/chat 2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image de wombat</title>
+    <title>Image de chat</title>
     <script defer src="https://unpkg.com/alpinejs"></script>
     <style>
         .menu {
@@ -38,16 +38,17 @@
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
             Menu
         </button>
-        <h1>Wombat n°1</h1>
-        <li><a href="wombat 2.html">Voir Wombat n°2</a></li>
+        <h1>Chat n°2</h1>
+        <li><a href="chat 1.html">Voir chat n°1</a></li>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
+                <li><a href="index.html">Retourner à l'accueil</a></li>
                 <li><a href="chat.html">Image de Chat</a></li>
                 <li><a href="wombat.html">Image de Wombat</a></li>
-                <li><a href="index.html">Retourner à l'accueil</a></li>
             </ul>
         </nav>
     </header>
-    <img src="Wombat1.jpg" alt="Image wombat">
+    <img src="Chat 2.jpg" alt="Image chat">
 </body>
+
 </html>
