--- a/Chats/chat.html
+++ b/Chats/chat.html
@@ -38,16 +38,16 @@
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
             Menu
         </button>
-        <h1>Wombat</h1>
+        <h1>Chat</h1>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="chat.html">Image de Chat</a></li>
-                <li><a href="index.html">Retourner à l'accueil</a></li>
-            </ul>
+            <li><a href="index.html">Retourner à l'accueil</a></li>
+            </ul><li><a href="wombat.html">Image de Wombat</a></li>
+
         </nav>
     </header>
-    <li><a href="Wombat 1.html">Wombat 1</a></li>
-    <li><a href="wombat 2.html">Wombat 2</a></li>
+    <li><a href="chat 1.html">Chat 1</a></li>
+    <li><a href="chat 2.html">Chat 2</a></li>
 </body>
 
 </html>
