--- a/Wombat/wombat 2.html
+++ b/Wombat/wombat 2.html
@@ -42,8 +42,9 @@
         <li><a href="wombat 1.html">Voir Wombat n°1</a></li>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="index.html">Retourner à l'accueil</a></li>
-                <li><a href="wombat.html">Image de Wombat</a></li>
+                <li><a href="../index.html">Retourner à l'accueil</a></li>
+                <li><a href="../Chats/index.html">Image de Chat</a></li>
+                <li><a href="index.html">Image de Wombat</a></li>
             </ul>
         </nav>
     </header>
