--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <h1>TP image</h1>
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
       <ul>
-        <li><a href="Chats/chat.html">Image de Chat</a></li>
-        <li><a href="Wombat/wombat.html">Image de Wombat</a></li>
+        <li><a href="Chats/index.html">Image de Chat</a></li>
+        <li><a href="Wombat/index.html">Image de Wombat</a></li>
       </ul>
     </nav>
   </header>
