--- a/Chats/chat 2.html
+++ b/Chats/chat 2.html
@@ -42,8 +42,9 @@
         <li><a href="chat 1.html">Voir chat n°1</a></li>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="index.html">Retourner à l'accueil</a></li>
-                <li><a href="chat.html">Image de Chat</a></li>
+                <li><a href="../index.html">Retourner à l'accueil</a></li>
+                <li><a href="index.html">Image de Chat</a></li>
+                <li><a href="../Wombat/index.html">Image de Wombat</a></li>
             </ul>
         </nav>
     </header>
