--- a/Chats/index.html
+++ b/Chats/index.html
@@ -41,7 +41,7 @@
         <h1>Chat</h1>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-            <li><a href="index.html">Retourner à l'accueil</a></li>
+            <li><a href="../index.html">Retourner à l'accueil</a></li>
         </nav>
     </header>
     <li><a href="chat 1.html">Chat 1</a></li>
