--- a/Wombat/index.html
+++ b/Wombat/index.html
@@ -41,7 +41,7 @@
         <h1>Wombat</h1>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="index.html">Retourner à l'accueil</a></li>
+                <li><a href="../index.html">Retourner à l'accueil</a></li>
             </ul>
         </nav>
     </header>
