--- a/Chats/chat 1.html
+++ b/Chats/chat 1.html
@@ -36,7 +36,7 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            Menu
+            <img src="../src/menu.svg" alt="">
         </button>
         <h1>Chat n°1</h1>
         <li><a href="chat 2.html">Voir chat n°2</a></li>
