--- a/Chats/index.html
+++ b/Chats/index.html
@@ -36,16 +36,17 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            Menu
+            <img src="../src/menu.svg" alt="">
         </button>
         <h1>Chat</h1>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
             <li><a href="../index.html">Retourner à l'accueil</a></li>
+            <li><a href="../Wombat/index.html">Image de Wombat</a></li>
         </nav>
     </header>
-    <li><a href="chat 1.html">Chat 1</a></li>
-    <li><a href="chat 2.html">Chat 2</a></li>
+    <li><a href="chat 1.html"><img src="../src/fleche.svg" alt="">Chat 1</a></li>
+    <li><a href="chat 2.html"><img src="../src/fleche.svg" alt="">Chat 2</a></li>
 </body>
 
 </html>
