--- a/Wombat/wombat 2.html
+++ b/Wombat/wombat 2.html
@@ -36,7 +36,7 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            Menu
+            <img src="../src/menu.svg" alt="">
         </button>
         <h1>Wombat n°2</h1>
         <li><a href="wombat 1.html">Voir Wombat n°1</a></li>
