--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- header>h1{Test de menu} -->
   <header>
     <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-      Menu
+      <img src="src/menu.svg" alt="">
     </button>
     <h1>TP image</h1>
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
@@ -59,7 +59,6 @@
     </dl>
     <dl>
       <dt><button @click="openElement = 'element3'">Public</button></dt>
-      <dd x-show="openElement === 'element3'"></dd>
     </dl>
   </div>
 </body>
