--- a/Chats/index.html
+++ b/Chats/index.html
@@ -36,7 +36,7 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            <img src="../src/menu.svg" alt="">
+            <img src="../Public/img/icones/menu.svg" alt="">
         </button>
         <h1>Chat</h1>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
@@ -45,8 +45,8 @@
             <li><a href="../Wombat/index.html">Image de Wombat</a></li>
         </nav>
     </header>
-    <li><a href="chat 1.html"><img src="../src/fleche.svg" alt="">Chat 1</a></li>
-    <li><a href="chat 2.html"><img src="../src/fleche.svg" alt="">Chat 2</a></li>
+    <li><a href="chat 1.html"><img src="../Public/img/icones/fleche.svg" alt="">Chat 1</a></li>
+    <li><a href="chat 2.html"><img src="../Public/img/icones/fleche.svg" alt="">Chat 2</a></li>
 </body>
 
 </html>
