--- a/Wombat/index.html
+++ b/Wombat/index.html
@@ -36,7 +36,7 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            <img src="../src/menu.svg" alt="">
+            <img src="../Public/img/icones/menu.svg" alt="">
         </button>
         <h1>Wombat</h1>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
@@ -46,8 +46,8 @@
             </ul>
         </nav>
     </header>
-    <li><a href="Wombat 1.html"><img src="../src/fleche.svg" alt="">Wombat 1</a></li>
-    <li><a href="wombat 2.html"><img src="../src/fleche.svg" alt="">Wombat 2</a></li>
+    <li><a href="Wombat 1.html"><img src="../Public/img/icones/fleche.svg" alt="">Wombat 1</a></li>
+    <li><a href="wombat 2.html"><img src="../Public/img/icones/fleche.svg" alt="">Wombat 2</a></li>
 </body>
 
 </html>
