--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <!-- header>h1{Test de menu} -->
   <header>
     <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-      <img src="../Public/img/icones/menu.svg" alt="">
+      <img src="Public/img/icones/menu.svg" alt="">
     </button>
-    <h1>TP image</h1>
+    <h1>Image de chat</h1>
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
       <ul>
         <li><a href="Chats/index.html">Image de Chat</a></li>
