--- a/Wombat/wombat 2.html
+++ b/Wombat/wombat 2.html
@@ -7,28 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image de wombat</title>
     <script defer src="https://unpkg.com/alpinejs"></script>
-    <style>
-        .menu {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            background: #fff;
-            display: grid;
-            place-content: center;
-        }
-
-        .header_menuBtn {
-            position: relative;
-            z-index: 10;
-        }
-
-        .noscroll,
-        .noscroll body {
-            overflow: hidden;
-        }
-    </style>
+    <link rel="stylesheet" href="/src/style.css">
 </head>
 
 <body>
