--- a/eng/Chats/index.html
+++ b/eng/Chats/index.html
@@ -36,17 +36,17 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            <img src="../Public/img/icones/menu.svg" alt="">
+            <img src="../icones/menu.svg" alt="">
         </button>
-        <h1>Chat</h1>
+        <h1>Cat</h1>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-            <li><a href="../index.html">Retourner à l'accueil</a></li>
-            <li><a href="../Wombat/index.html">Image de Wombat</a></li>
+            <li><a href="../index.html">Homepage</a></li>
+            <li><a href="../Wombat/index.html">Picture of Wombat</a></li>
         </nav>
     </header>
-    <li><a href="chat 1.html"><img src="../Public/img/icones/fleche.svg" alt="">Chat 1</a></li>
-    <li><a href="chat 2.html"><img src="../Public/img/icones/fleche.svg" alt="">Chat 2</a></li>
+    <li><a href="chat 1.html"><img src="../icones/fleche.svg" alt="">Cat 1</a></li>
+    <li><a href="chat 2.html"><img src="../icones/fleche.svg" alt="">Cat 2</a></li>
 </body>
 
 </html>
