--- a/eng/Wombat/index.html
+++ b/eng/Wombat/index.html
@@ -15,20 +15,20 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            <img src="../Public/img/icones/menu.svg" alt="">
+            <img src="../icones/menu.svg" alt="">
         </button>
         <h1>Wombat</h1>
-        <p>Les wombats forment une famille de mammifères marsupiaux fouisseurs.</p>
-        <p>Ils vivent dans les forêts montagneuses d'Australie, où ils creusent de vastes terriers.</p>
+        <p>Wombats are a family of burrowing marsupial mammals.</p>
+        <p>They live in the mountainous forests of Australia, where they dig large burrows.</p>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="../index.html">Retourner à l'accueil</a></li>
-                <li><a href="../Chats/index.html">Image de Chat</a></li>
+                <li><a href="../index.html">Homepage</a></li>
+                <li><a href="../Chats/index.html">Picture of Cat</a></li>
             </ul>
         </nav>
     </header>
-    <li><a href="Wombat 1.html"><img src="../Public/img/icones/fleche.svg" alt="">Wombat 1</a></li>
-    <li><a href="wombat 2.html"><img src="../Public/img/icones/fleche.svg" alt="">Wombat 2</a></li>
+    <li><a href="Wombat 1.html"><img src="../icones/fleche.svg" alt="">Wombat 1</a></li>
+    <li><a href="wombat 2.html"><img src="../icones/fleche.svg" alt="">Wombat 2</a></li>
 </body>
 
 </html>
