--- a/eng/index.html
+++ b/eng/index.html
@@ -17,7 +17,7 @@
     <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
       <img src="icones/menu.svg" alt="">
     </button>
-    <h1>TP Image</h1>
+    <h1>TP Picture</h1>
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
       <ul>
         <li><a href="Chats/index.html">Picture of Cat</a></li>
