--- a/fr/Wombat/Wombat 1.html
+++ b/fr/Wombat/Wombat 1.html
@@ -15,7 +15,7 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            <img src="../Public/img/icones/menu.svg" alt="">
+            <img src="..img/ico/nes/menu.svg" alt="">
         </button>
         <h1>Wombat n°1</h1>
         <li><a href="wombat 2.html">Voir Wombat n°2</a></li>
@@ -27,6 +27,6 @@
             </ul>
         </nav>
     </header>
-    <img src="../Public/img/Wombat1.jpg" alt="Image wombat">
+    <img src="..img/Wombat1.jpg" alt="Image wombat">
 </body>
 </html>
