--- a/fr/Wombat/index.html
+++ b/fr/Wombat/index.html
@@ -15,7 +15,7 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            <img src="../Public/img/icones/menu.svg" alt="">
+            <img src="..img/icones/menu.svg" alt="">
         </button>
         <h1>Wombat</h1>
         <p>Les wombats forment une famille de mammifères marsupiaux fouisseurs.</p>
