--- a/eng/Chats/chat 2.html
+++ b/eng/Chats/chat 2.html
@@ -36,19 +36,19 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            <img src="../Public/img/icones/menu.svg" alt="">
+            <img src="../icones/menu.svg" alt="">
         </button>
         <h1>Chat n°2</h1>
-        <li><a href="chat 1.html">Voir chat n°1</a></li>
+        <li><a href="chat 1.html">See cat n°1</a></li>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="../index.html">Retourner à l'accueil</a></li>
-                <li><a href="index.html">Image de Chat</a></li>
-                <li><a href="../Wombat/index.html">Image de Wombat</a></li>
+                <li><a href="../index.html">Homepage</a></li>
+                <li><a href="index.html">Picture of Chat</a></li>
+                <li><a href="../Wombat/index.html">Picture of Wombat</a></li>
             </ul>
         </nav>
     </header>
-    <img src="../Public/img/Chat 2.jpg" alt="Image chat">
+    <img src="../img/Chat 2.jpg" alt="Image chat">
 </body>
 
 </html>
