--- a/eng/Wombat/wombat 2.html
+++ b/eng/Wombat/wombat 2.html
@@ -15,18 +15,18 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            <img src="../Public/img/icones/menu.svg" alt="">
+            <img src="../icones/menu.svg" alt="">
         </button>
         <h1>Wombat n°2</h1>
-        <li><a href="wombat 1.html">Voir Wombat n°1</a></li>
+        <li><a href="wombat 1.html">See Wombat n°1</a></li>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
             <ul>
-                <li><a href="../index.html">Retourner à l'accueil</a></li>
-                <li><a href="../Chats/index.html">Image de Chat</a></li>
-                <li><a href="index.html">Image de Wombat</a></li>
+                <li><a href="../index.html">Homepage</a></li>
+                <li><a href="../Chats/index.html">Picture Cat</a></li>
+                <li><a href="index.html">Picture Wombat</a></li>
             </ul>
         </nav>
     </header>
-    <img src="../Public/img/wombat2.jpg" alt="Image wombat">
+    <img src="../img/wombat2.jpg" alt="Image wombat">
 </body>
 </html>
