--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <li><a href="fr/index.html">Accueil en français</a></li>
+    <li><a href="eng/index.html">Homepage in english</a></li>
     </li>
 </body>
 </html>
