--- a/fr/Wombat/index.html
+++ b/fr/Wombat/index.html
@@ -15,7 +15,7 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            <img src="..img/icones/menu.svg" alt="">
+            <img src="../icones/menu.svg" alt="">
         </button>
         <h1>Wombat</h1>
         <p>Les wombats forment une famille de mammifères marsupiaux fouisseurs.</p>
@@ -27,8 +27,8 @@
             </ul>
         </nav>
     </header>
-    <li><a href="Wombat 1.html"><img src="../Public/img/icones/fleche.svg" alt="">Wombat 1</a></li>
-    <li><a href="wombat 2.html"><img src="../Public/img/icones/fleche.svg" alt="">Wombat 2</a></li>
+    <li><a href="Wombat 1.html"><img src="../icones/fleche.svg" alt="">Wombat 1</a></li>
+    <li><a href="wombat 2.html"><img src="../icones/fleche.svg" alt="">Wombat 2</a></li>
 </body>
 
 </html>
