--- a/fr/index.html
+++ b/fr/index.html
@@ -20,6 +20,8 @@
     <h1>TP Image</h1>
     <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
       <ul>
+        <li><a href="../index.html">Acceuil général</a></li>
+        <li><a href="../eng/index.html">Page d'acceuil Anglais</a></li>
         <li><a href="Chats/index.html">Image de Chat</a></li>
         <li><a href="Wombat/index.html">Image de Wombat</a></li>
       </ul>
