--- a/fr/Chats/chat 2.html
+++ b/fr/Chats/chat 2.html
@@ -36,7 +36,7 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            <img src="../Public/img/icones/menu.svg" alt="">
+            <img src="../img/icones/menu.svg" alt="">
         </button>
         <h1>Chat n°2</h1>
         <li><a href="chat 1.html">Voir chat n°1</a></li>
@@ -48,7 +48,7 @@
             </ul>
         </nav>
     </header>
-    <img src="../Public/img/Chat 2.jpg" alt="Image chat">
+    <img src="../img/Chat 2.jpg" alt="Image chat">
 </body>
 
 </html>
