--- a/fr/Wombat/wombat 2.html
+++ b/fr/Wombat/wombat 2.html
@@ -15,7 +15,7 @@
     <!-- header>h1{Test de menu} -->
     <header>
         <button aria-controls="mainNav" @click="menuIsOpen =! menuIsOpen" class="header_menuBtn">
-            <img src="../img/icones/menu.svg" alt="">
+            <img src="../icones/menu.svg" alt="">
         </button>
         <h1>Wombat n°2</h1>
         <li><a href="wombat 1.html">Voir Wombat n°1</a></li>
