--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <li><a href="fr/index.html">Accueil en français</a></li>
     <li><a href="eng/index.html">Homepage in english</a></li>
-    </li>
+    <a href="../fr/index.html" onclick="document.cookie = 
+    `nf_lang=fr; path=/ ; SameSite=Strict`
+    ">
 </body>
 </html>
