ajout hreflang pour les autres pages

--- a/eng/Wombat/index.html
+++ b/eng/Wombat/index.html
@@ -8,6 +8,7 @@
     <title>Accueil wombat</title>
     <script defer src="https://unpkg.com/alpinejs"></script>
     <link rel="stylesheet" href="/src/style.css">
+    <link rel="alternate" hreflang="en" href="https://example.com" />
 </head>
 
 <body>
