--- a/eng/Chats/index.html
+++ b/eng/Chats/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tp Image</title>
     <script defer src="https://unpkg.com/alpinejs"></script>
+    <link rel="alternate" hreflang="en" href="https://example.com" />
     <style>
         .menu {
             position: fixed;
